package me.hkaibni.model.roles;


public enum Gender {
    MALE,
    FEMALE
}